--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -152,10 +152,11 @@
     margin: 0 2px 20px 2px;
   }
 
-  .widget_block a,
-  .comments-area a,
-  .entry-content a {
-    @apply hover:underline;
+  .entry-content a
+  .comments-content a,
+  .comment-reply-link,
+   {
+    @apply underline hover:no-underline;
   }
 
   .search-submit{
@@ -255,39 +256,12 @@
   }
 
   .screen-reader-text {
-    border: 0;
-    clip: rect(1px, 1px, 1px, 1px);
-    clip-path: inset(50%);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute !important;
-    width: 1px;
-    word-wrap: normal !important;
-    /* Many screen reader and browser combinations announce broken words as they would appear visually. */
+    @apply text-gray-700 font-bold p-2 text-base m-1 text-center;
   }
 
   .screen-reader-text:focus {
-    background-color: #f1f1f1;
-    border-radius: 3px;
-    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
-    clip: auto !important;
-    clip-path: none;
-    color: #21759b;
-    display: block;
-    font-size: 14px;
-    font-size: 0.875rem;
-    font-weight: bold;
-    height: auto;
-    right: 5px;
-    line-height: normal;
-    padding: 15px 23px 14px;
-    text-decoration: none;
-    top: 5px;
-    width: auto;
+    @apply text-gray-700 font-bold p-2 text-base m-0.5 text-center;
     z-index: 100000;
-    /* Above WP toolbar. */
   }
 
 }
