[FIX] Fixed the css issue with the widgets and header

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -103,7 +103,9 @@
   }
 
   .sidebar section.widget_block p,
-  .sidebar section.widget_block h2{
+  .sidebar section.widget_block h2,
+  .sidebar section.widget_meta h3,
+  .sidebar section.widget_categories h3{
     @apply my-0 px-3 py-2 text-gray-700 font-bold border-b-2 text-lg rounded-t-lg;
   }
   .sidebar .wp-block-search{
@@ -113,16 +115,22 @@
     @apply hidden;
   }
   .sidebar section.widget_block ul,
+  .sidebar section.widget_meta ul,
+  .sidebar section.widget_categories ul,
   .sidebar section.widget_block ol {
     @apply py-2;
   }
 
   .sidebar section.widget_block ul li,
-  .sidebar section.widget_block ol li {
+  .sidebar section.widget_block ol li,
+  .sidebar section.widget_meta ul li,
+  .sidebar section.widget_categories ul li {
     @apply mb-0 px-3 py-2 list-none cursor-pointer hover:bg-gray-100 rounded focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600;
   }
 
-  .sidebar section.widget_block a{
+  .sidebar section.widget_block a,
+  .sidebar section.widget_meta a,
+  .sidebar section.widget_categories a{
     @apply rounded focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600;
   }
 
@@ -138,7 +146,7 @@
   } */
 
   .navbar-brand{
-    @apply text-2xl font-bold;
+    @apply text-4xl font-bold;
   }
   .navbar-brand img,
   .custom-logo-link img{
